Closed
Bug 923354
Opened 11 years ago
Closed 11 years ago
Build fails with "The MacroAssembler is not supported on this platform."
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla27
People
(Reporter: stevensn, Assigned: stevensn)
References
Details
Attachments
(1 file, 1 obsolete file)
828 bytes,
patch
|
Details | Diff | Splinter Review |
Building on ppc fails with the following errors src/js/src/assembler/assembler/MacroAssembler.h:62:2: error: #error "The MacroAssembler is not supported on this platform." when building js/src/vm/Runtime.cpp This appears to have been with bug 921130
Assignee | ||
Comment 1•11 years ago
|
||
Proposed fix - don't include MacroAssembler.h on non ION platforms
Assignee | ||
Updated•11 years ago
|
Attachment #813419 -
Flags: review?(luke)
Comment 2•11 years ago
|
||
Comment on attachment 813419 [details] [diff] [review] 923354.patch Great, sorry for breakage. Can you indent the #if'd #include: #if defined(JS_ION) # include "assembler/assembler/MacroAssembler.h" #endif
Attachment #813419 -
Flags: review?(luke) → review+
Assignee | ||
Comment 3•11 years ago
|
||
Updated patch that indents the #include.
Attachment #813419 -
Attachment is obsolete: true
Assignee | ||
Updated•11 years ago
|
Keywords: checkin-needed
Comment 4•11 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/790dd24ecef2
Assignee: nobody → steve
Keywords: checkin-needed
Comment 5•11 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/790dd24ecef2
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
You need to log in
before you can comment on or make changes to this bug.
Description
•